chages dashboard color and fixes long entry names appearance in diary to truncate and add ellipses

--- a/src/components/MealComponent/MealComponent.module.scss
+++ b/src/components/MealComponent/MealComponent.module.scss
@@ -34,10 +34,25 @@
       font-weight: 300;
 
       .foodDesc {
+        flex: 1;
         text-align: left;
+        min-width: 0;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
-      .foodCal {
-        text-align: right;
+
+      .caloriesAndDelete {
+        white-space: nowrap;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+
+        .foodCal {
+          text-align: right;
+          margin-right: 20px;
+        }
       }
     }
 
